// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumPage matches snapshot when logged in with GitHub 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            <WithI18n
              defaults="WoWAnalyzer premium"
              id="interface.premiumPage.premium"
            />
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            <WithI18n
              components={
                Array [
                  <span
                    style={
                      Object {
                        "color": "#fab700",
                        "fontWeight": 700,
                      }
                    }
                  />,
                ]
              }
              defaults="Help out development and unlock <0>WoWAnalyzer Premium</0>!"
              id="interface.premiumPage.premium.helpout"
            />
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="How to unlock WoWAnalyzer Premium:"
                id="interface.premiumPage.howToUnlock"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <WithI18n
                components={
                  Array [
                    <h2 />,
                  ]
                }
                defaults="<0>Patreon</0>Help fund further development by becoming a patron on Patreon. Pledge whatever you want!"
                id="interface.premiumPage.helpPatreon"
              />
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <WithI18n
                components={
                  Array [
                    <h2 />,
                    <TooltipElement
                      className=""
                      content="Only commits that are merged to the master branch are eligible. Your work will have to pass a pull request review before it can be merged."
                      direction="down"
                      hoverable={false}
                      style={Object {}}
                      tooltipClassName=""
                    />,
                  ]
                }
                defaults="<0>GitHub</0>Improve the analysis of a spec or build a new feature to get 1 month of Premium free<1>*</1>."
                id="interface.premiumPage.helpGitHub"
              />
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="WoWAnalyzer Premium unlocks the following things:"
                id="interface.premiumPage.unlocks"
              />
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                      <a
                        href="https://www.bountysource.com/teams/wowanalyzer"
                      />,
                    ]
                  }
                  defaults="<0>New things</0><1>Nothing develops itself.</1> Your contributions will help fund new things for the site, making it even better. We'll post bounties on the best ideas via <2>Bountysource</2> as a motivation to get developers to build them."
                  id="interface.premiumPage.unlocks.new"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Updates for patches</0><1>Updating for patches is a lot of work.</1> We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches."
                  id="interface.premiumPage.unlocks.updates"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>No ads</0><1>Nobody likes them, but we need them.</1> Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter."
                  id="interface.premiumPage.unlocks.noAds"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Discord name color</0><1>We'll help anyone, but sometimes we can't avoid favoritism.</1> Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color."
                  id="interface.premiumPage.unlocks.discord"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Access to secret channels on Discord</0><1>You don't know what you're missing out on.</1> Get access to special Discord channels to discuss things privately in the sub-community."
                  id="interface.premiumPage.unlocks.discordChannels"
                />
              </div>
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="How to login for WoWAnalyzer Premium:"
                id="interface.premiumPage.howToLogin"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-12"
            >
              <WithI18n
                components={
                  Array [
                    <a
                      href="/discord"
                    />,
                  ]
                }
                defaults="Logging in is easy, just click one of the buttons on the panel to the left. If you have any more questions ask away <0>at Discord</0>."
                id="interface.premiumPage.howToLoginDescription"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h2>
            <WithI18n
              defaults="You"
              id="interface.premiumPage.you"
            />
          </h2>
        </div>
        <div
          className="panel-body pad"
        >
          <WithI18n
            defaults="Hello {0}. Your Premium is currently {1} {2} {3} . {4}"
            id="interface.premiumPage.status"
            values={
              Object {
                "0": "Martijn Hols",
                "1": <span
                  className="text-danger"
                >
                  <WithI18n
                    defaults="Inactive"
                    id="interface.premiumPage.status.inactive"
                  />
                </span>,
                "2": undefined,
                "3": <React.Fragment>
                   
                  <WithI18n
                    defaults="because of a recent GitHub contribution (active until {0})"
                    id="interface.premiumPage.status.gitHub"
                    values={
                      Object {
                        "0": "Mon, 02 Jul 2018 11:48:40 GMT",
                      }
                    }
                  />
                </React.Fragment>,
                "4": Object {
                  "defaults": "You can get Premium by becoming a Patron on Patreon or by making a contribution to application on GitHub. Try logging in again if you wish to refresh your status.",
                  "id": "interface.premiumPage.status.getPremium",
                },
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`PremiumPage matches snapshot when logged in with Patreon 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            <WithI18n
              defaults="WoWAnalyzer premium"
              id="interface.premiumPage.premium"
            />
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            <WithI18n
              components={
                Array [
                  <span
                    style={
                      Object {
                        "color": "#fab700",
                        "fontWeight": 700,
                      }
                    }
                  />,
                ]
              }
              defaults="Help out development and unlock <0>WoWAnalyzer Premium</0>!"
              id="interface.premiumPage.premium.helpout"
            />
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="How to unlock WoWAnalyzer Premium:"
                id="interface.premiumPage.howToUnlock"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <WithI18n
                components={
                  Array [
                    <h2 />,
                  ]
                }
                defaults="<0>Patreon</0>Help fund further development by becoming a patron on Patreon. Pledge whatever you want!"
                id="interface.premiumPage.helpPatreon"
              />
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <WithI18n
                components={
                  Array [
                    <h2 />,
                    <TooltipElement
                      className=""
                      content="Only commits that are merged to the master branch are eligible. Your work will have to pass a pull request review before it can be merged."
                      direction="down"
                      hoverable={false}
                      style={Object {}}
                      tooltipClassName=""
                    />,
                  ]
                }
                defaults="<0>GitHub</0>Improve the analysis of a spec or build a new feature to get 1 month of Premium free<1>*</1>."
                id="interface.premiumPage.helpGitHub"
              />
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="WoWAnalyzer Premium unlocks the following things:"
                id="interface.premiumPage.unlocks"
              />
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                      <a
                        href="https://www.bountysource.com/teams/wowanalyzer"
                      />,
                    ]
                  }
                  defaults="<0>New things</0><1>Nothing develops itself.</1> Your contributions will help fund new things for the site, making it even better. We'll post bounties on the best ideas via <2>Bountysource</2> as a motivation to get developers to build them."
                  id="interface.premiumPage.unlocks.new"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Updates for patches</0><1>Updating for patches is a lot of work.</1> We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches."
                  id="interface.premiumPage.unlocks.updates"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>No ads</0><1>Nobody likes them, but we need them.</1> Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter."
                  id="interface.premiumPage.unlocks.noAds"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Discord name color</0><1>We'll help anyone, but sometimes we can't avoid favoritism.</1> Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color."
                  id="interface.premiumPage.unlocks.discord"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Access to secret channels on Discord</0><1>You don't know what you're missing out on.</1> Get access to special Discord channels to discuss things privately in the sub-community."
                  id="interface.premiumPage.unlocks.discordChannels"
                />
              </div>
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="How to login for WoWAnalyzer Premium:"
                id="interface.premiumPage.howToLogin"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-12"
            >
              <WithI18n
                components={
                  Array [
                    <a
                      href="/discord"
                    />,
                  ]
                }
                defaults="Logging in is easy, just click one of the buttons on the panel to the left. If you have any more questions ask away <0>at Discord</0>."
                id="interface.premiumPage.howToLoginDescription"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h2>
            <WithI18n
              defaults="You"
              id="interface.premiumPage.you"
            />
          </h2>
        </div>
        <div
          className="panel-body pad"
        >
          <WithI18n
            defaults="Hello {0}. Your Premium is currently {1} {2} {3} . {4}"
            id="interface.premiumPage.status"
            values={
              Object {
                "0": "Martijn Hols",
                "1": <span
                  className="text-danger"
                >
                  <WithI18n
                    defaults="Inactive"
                    id="interface.premiumPage.status.inactive"
                  />
                </span>,
                "2": Object {
                  "defaults": " because of your Patreonage",
                  "id": "interface.premiumPage.status.patreon",
                },
                "3": undefined,
                "4": Object {
                  "defaults": "You can get Premium by becoming a Patron on Patreon or by making a contribution to application on GitHub. Try logging in again if you wish to refresh your status.",
                  "id": "interface.premiumPage.status.getPremium",
                },
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`PremiumPage matches snapshot when logged out 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            <WithI18n
              defaults="WoWAnalyzer premium"
              id="interface.premiumPage.premium"
            />
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            <WithI18n
              components={
                Array [
                  <span
                    style={
                      Object {
                        "color": "#fab700",
                        "fontWeight": 700,
                      }
                    }
                  />,
                ]
              }
              defaults="Help out development and unlock <0>WoWAnalyzer Premium</0>!"
              id="interface.premiumPage.premium.helpout"
            />
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="How to unlock WoWAnalyzer Premium:"
                id="interface.premiumPage.howToUnlock"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <WithI18n
                components={
                  Array [
                    <h2 />,
                  ]
                }
                defaults="<0>Patreon</0>Help fund further development by becoming a patron on Patreon. Pledge whatever you want!"
                id="interface.premiumPage.helpPatreon"
              />
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <WithI18n
                components={
                  Array [
                    <h2 />,
                    <TooltipElement
                      className=""
                      content="Only commits that are merged to the master branch are eligible. Your work will have to pass a pull request review before it can be merged."
                      direction="down"
                      hoverable={false}
                      style={Object {}}
                      tooltipClassName=""
                    />,
                  ]
                }
                defaults="<0>GitHub</0>Improve the analysis of a spec or build a new feature to get 1 month of Premium free<1>*</1>."
                id="interface.premiumPage.helpGitHub"
              />
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="WoWAnalyzer Premium unlocks the following things:"
                id="interface.premiumPage.unlocks"
              />
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                      <a
                        href="https://www.bountysource.com/teams/wowanalyzer"
                      />,
                    ]
                  }
                  defaults="<0>New things</0><1>Nothing develops itself.</1> Your contributions will help fund new things for the site, making it even better. We'll post bounties on the best ideas via <2>Bountysource</2> as a motivation to get developers to build them."
                  id="interface.premiumPage.unlocks.new"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Updates for patches</0><1>Updating for patches is a lot of work.</1> We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches."
                  id="interface.premiumPage.unlocks.updates"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>No ads</0><1>Nobody likes them, but we need them.</1> Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter."
                  id="interface.premiumPage.unlocks.noAds"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Discord name color</0><1>We'll help anyone, but sometimes we can't avoid favoritism.</1> Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color."
                  id="interface.premiumPage.unlocks.discord"
                />
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <WithI18n
                  components={
                    Array [
                      <h2 />,
                      <strong />,
                    ]
                  }
                  defaults="<0>Access to secret channels on Discord</0><1>You don't know what you're missing out on.</1> Get access to special Discord channels to discuss things privately in the sub-community."
                  id="interface.premiumPage.unlocks.discordChannels"
                />
              </div>
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              <WithI18n
                defaults="How to login for WoWAnalyzer Premium:"
                id="interface.premiumPage.howToLogin"
              />
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-12"
            >
              <WithI18n
                components={
                  Array [
                    <a
                      href="/discord"
                    />,
                  ]
                }
                defaults="Logging in is easy, just click one of the buttons on the panel to the left. If you have any more questions ask away <0>at Discord</0>."
                id="interface.premiumPage.howToLoginDescription"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
